syntax = "proto3";

package yandex.cloud.priv.disk_manager.v1;

option go_package = "a.yandex-team.ru/cloud/disk_manager/api/yandex/cloud/priv/disk_manager/v1;disk_manager";

enum PlacementStrategy {
    PLACEMENT_STRATEGY_UNSPECIFIED = 0;
    PLACEMENT_STRATEGY_SPREAD = 1;
}

message GroupId {
    string zone_id = 1;
    string group_id = 2;
}

message PlacementGroup {
    GroupId group_id = 1;
    PlacementStrategy placement_strategy = 2;
    repeated string disk_ids = 3;
    repeated string racks = 4;
}
